// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`omitEmpty > should remove empty from array 1`] = `
[
  1,
  2,
  3,
  4,
  {},
  {
    "a": 1,
    "b": 2,
    "f": {},
    "g": {
      "a": 1,
      "b": {},
      "h": [],
    },
  },
  [
    1,
    2,
    3,
    4,
    {},
    {
      "a": 1,
      "b": {},
    },
  ],
]
`;

exports[`omitEmpty > should remove empty from object 1`] = `
{
  "a": 1,
  "b": 2,
  "f": {},
  "g": {
    "a": 1,
    "b": {},
  },
  "h": [
    1,
    2,
    3,
    4,
    {},
    {
      "a": 1,
      "b": {},
    },
    [
      1,
      2,
      3,
      4,
      {},
      {
        "a": 1,
        "b": {},
        "h": [],
      },
    ],
  ],
}
`;
